2007-08-03 Brian Nickel <brian.nickel@gmail.com>

	* src/Mono.WebServer.FastCgi/server.cs: Removed
	`configmanager ["nonstop"] = "True";' as it is no longer necessary.

2007-08-03 Brian Nickel <brian.nickel@gmail.com>

	* doc/linux/lighttpd.html: Explain disabling local checking.
	
	* doc/linux/abyss.html: Started documenting.
	
	* doc/linux/cherokee.html: Remove "/nonstop" argument.
	
	* src/Mono.FastCgi/Requests/Request.cs: Send data in records 0x7fff
	bytes or less rather than 0xffff bytes or less. Abyss skipped over this
	packet. (Other servers may do the same.) I've noticed similar behavior
	from Cherokee where it sends smaller than the maximum size.

2007-08-03 Brian Nickel <brian.nickel@gmail.com>

	* src/Mono.FastCgi/Structures/BeginRequestBody.cs: 
	* src/Mono.FastCgi/Structures/Record.cs: 
	* src/Mono.FastCgi/Structures/NameValuePair.cs: 
	* src/Mono.FastCgi/SocketAbstractions/UnixSocket.cs: 
	* src/Mono.FastCgi/SocketAbstractions/UnmanagedSocket.cs: Use "Strings".
	
	* src/Mono.FastCgi/Connection.cs: Make sure to close the socket and
	release the buffers at the end of "Run" if there are no requests
	pending.
	
	* src/Mono.FastCgi/Mono.FastCgi.mdp: Target 2.0 runtime.
	
	* src/Mono.FastCgi/Logger.cs: Add "Debug" level. Use "Strings".
	
	* src/Mono.FastCgi/Server.cs:
	* src/Mono.FastCgi/Requests/Request.cs: Use "Strings". Don't throw
	exceptions when warnings would suffice.
	* src/Mono.FastCgi/Requests/ResponderRequest.cs: Use "Strings". 
	
	* src/Mono.FastCgi/Strings.cs:
	* src/Mono.FastCgi.sources: Add Strings.cs to hold all message strings.
	The strings will later be moved into a resource so internationalization
	can take place.
	
	* src/Makefile.am: Define "NET_2_0" for all 2.0 assemblies.
	
	* src/Mono.WebServer.FastCgi/Responder.cs: 
	* src/Mono.WebServer.FastCgi/WorkerRequest.cs: Use new API w/ generics.
	
	* src/Mono.WebServer.FastCgi/Mono.WebServer.FastCgi.mdp: Target 2.0
	runtime.
	